@@ -8,7 +8,7 @@ import java.util.List;
 
 public class PathAndFilesEx3 {
     public static void main(String[] args) throws IOException {
-        Path filePath = Paths.get("test17.txt");
+        Path filePath = Path.of("test17.txt");
         /*Files.createFile(filePath);
         String dialog = "Hello, Igor!\nHow are you?\nI am fine!";
         Files.write(filePath, dialog.getBytes());*/
